<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".HomePageActivity">


    <ProgressBar
        android:id="@+id/exp_bar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:indeterminateOnly="false"
        android:max="100"
        android:min="0"
        android:progress="50"
        android:progressDrawable="@drawable/circle"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/task_bar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/level_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/atlantis_international"
        android:shadowColor="@color/text_shadow"
        android:shadowDy="5"
        android:shadowRadius="0.1"
        android:text="@string/level"
        android:textColor="@color/black"
        android:textFontWeight="800"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="@+id/exp_bar"
        app:layout_constraintEnd_toEndOf="@+id/exp_bar"
        app:layout_constraintStart_toStartOf="@+id/exp_bar"
        app:layout_constraintTop_toTopOf="@+id/exp_bar" />

    <TextView
        android:id="@+id/level_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/atlantis_international"
        android:shadowColor="@color/text_shadow"
        android:shadowDy="4"
        android:shadowRadius="0.1"
        android:text="lvl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textFontWeight="700"

        app:layout_constraintBottom_toTopOf="@+id/level_num"
        app:layout_constraintEnd_toEndOf="@+id/exp_bar"
        app:layout_constraintStart_toStartOf="@+id/exp_bar"
        app:layout_constraintTop_toTopOf="@+id/exp_bar"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/task_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="234dp"
        android:layout_height="10dp"
        android:max="100"
        android:progress="50"
        android:background="@drawable/prog_bars"
        android:progressDrawable="@drawable/taskbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/task_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/atlantis_international"
        android:shadowColor="@color/text_shadow"
        android:shadowDy="2"
        android:shadowRadius="0.1"
        android:text="@string/task_progress"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toEndOf="@+id/exp_bar"
        app:layout_constraintTop_toBottomOf="@+id/task_bar" />

    <TextView
        android:id="@+id/currency_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/atlantis_international"
        android:shadowColor="@color/text_shadow"
        android:shadowDy="3"
        android:shadowRadius="0.1"
        android:text="@string/currency"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/currency_yellow"
        app:layout_constraintStart_toEndOf="@+id/exp_bar"
        app:layout_constraintTop_toBottomOf="@+id/task_bar" />

    <TextView
        android:id="@+id/username"
        android:layout_width="234dp"
        android:layout_height="24dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/atlantis_international"
        android:shadowColor="@color/text_shadow"
        android:shadowDy="5"
        android:shadowRadius="0.1"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/task_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/nav_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/home_home_btn"
            android:layout_width="104dp"
            android:layout_height="100dp"
            android:background="@drawable/home_button"
            android:contentDescription="@string/home_btn" />

        <ImageButton
            android:id="@+id/home_task_btn"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:background="@drawable/tasks_button"
            android:contentDescription="@string/task_btn" />

        <ImageButton
            android:id="@+id/home_shop_btn"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:background="@drawable/shop_button"
            android:contentDescription="@string/shop_btn" />

        <ImageButton
            android:id="@+id/home_setting_btn"
            android:layout_width="104dp"
            android:layout_height="100dp"
            android:background="@drawable/settings_button"
            android:contentDescription="@string/settings_btn" />
    </LinearLayout>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sprite" />

    <TextView
        android:id="@+id/avaterText"
        android:layout_width="109dp"
        android:layout_height="47dp"
        android:visibility="invisible"
        android:fontFamily="@font/atlantis_international"
        android:text="Hello, How are you doing today?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

</androidx.constraintlayout.widget.ConstraintLayout>